# core_api_rest_framework

dev1x_core/: MANIFEST.in  README.md  runtests.py  setup.cfg  setup.py
dev1x_core/docs/: index.md
dev1x_core/docs_theme/: main.html
dev1x_core/mind_core/: __init__.py  apps.py  authentication.py  checks.py  decorators.py  documentation.py  exceptions.py  fields.py  filters.py  generics.py  metadata.py  mixins.py  negotiation.py  pagination.py  parsers.py  permissions.py  relations.py  renderers.py  request.py  response.py  reverse.py  routers.py  serializers.py  settings.py  test.py  throttling.py  urlpatterns.py  urls.py  validators.py  versioning.py  views.py  viewsets.py
dev1x_core/mind_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dev1x_core/tests/: conftest.py  test_api_client.py  test_atomic_requests.py  test_authtoken.py  test_bound_fields.py  test_decorators.py  test_description.py  test_encoders.py  test_exceptions.py  test_fields.py  test_filters.py  test_generateschema.py  test_generics.py  test_htmlrenderer.py  test_lazy_hyperlinks.py  test_metadata.py  test_middleware.py  test_model_serializer.py  test_multitable_inheritance.py  test_negotiation.py  test_one_to_one_with_inheritance.py  test_pagination.py  test_parsers.py  test_permissions.py  test_prefetch_related.py  test_relations.py  test_relations_hyperlink.py  test_relations_pk.py  test_relations_slug.py  test_renderers.py  test_request.py  test_requests_client.py  test_response.py  test_reverse.py  test_routers.py  test_schemas.py  test_serializer.py  test_serializer_bulk_update.py  (+18 more)
(+239 files in other folders)
