[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict -ra
testspath = tests

[flake8]
ignore = E501
banned-modules = json = use from mind_core.utils import json!

[isort]
skip=.tox
atomic=true
multi_line_output=5
known_standard_library=types
known_third_party=pytest,_pytest,django,pytz
known_first_party=mind_core

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = mind_core/*,tests/*
branch = 1

[coverage:report]
include = mind_core/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError
